Fix configuration branding: Change techPro to techThemes and update URLs
- Update package.json configuration from techPro.fileIconsMonochrome to techThemes.fileIconsMonochrome
- Fix configuration references in main.js and browser.js from 'techPro' to 'techThemes'
- Update main.js openWebsite URL to GitHub repo instead of mtech.pro
- Rebuild extension package with corrected M Tech Themes branding

--- a/package.json
+++ b/package.json
@@ -273,9 +273,9 @@
 		],
 		"configuration": {
 			"type": "object",
-			"title": "M Tech Theme Settings",
+			"title": "M Tech Themes Settings",
 			"properties": {
-				"techPro.fileIconsMonochrome": {
+				"techThemes.fileIconsMonochrome": {
 					"type": "boolean",
 					"default": false,
 					"description": "makes the file icons monochrome"
