Improve VSIX package and installation instructions
- Update .vscodeignore to include CHANGELOG.md and be more conservative
- Rebuild package with better file inclusion (now 61 files, 296.37 KB)
- Update README with clear UI-based installation steps using Extensions panel three dots menu
- Add comprehensive troubleshooting section for 'package.json not found' errors
- Emphasize using VS Code UI method over Command Palette for reliability

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -16,16 +16,11 @@ tsconfig.json
 webpack.config.js
 .eslintrc.json
 
-# Documentation (keeping README.md but excluding others)
-CHANGELOG.md
-
-# Package files (will be generated)
-*.vsix
-
 # Temporary files
 .tmp/
 temp/
 *.tmp
+temp-extract/
 
 # OS generated files
 Thumbs.db
