--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "M Tech Themes",
 	"description": "✨ Professional dark & light theme + icon pack, from the author of the original M Tech color scheme.",
 	"publisher": "mtech",
-	"version": "0.2.0",
+	"version": "0.2.1",
 	"pricing": "Free",
 	"engines": {
 		"vscode": "^1.90.0"
@@ -352,6 +352,12 @@
 	"main": "./js/main",
 	"browser": "./js/browser",
 	"license": "SEE LICENSE IN LICENSE",
+	"scripts": {
+		"build": "npx @vscode/vsce package",
+		"build-extension": "npx @vscode/vsce package",
+		"package": "npx @vscode/vsce package",
+		"vsce-package": "vsce package"
+	},
 	"activationEvents": [
 		"onStartupFinished"
 	],
