chore: update publisher ID to M-Tech for marketplace

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "theme-m-tech-vscode",
 	"displayName": "M Tech Themes",
 	"description": "✨ Professional dark & light theme + icon pack, from the author of the original M Tech color scheme.",
-	"publisher": "mtech",
+	"publisher": "M-Tech",
 	"version": "0.5.28",
 	"pricing": "Free",
 	"engines": {
